<resources>
    <string name="app_name">Gebung</string>
    <string name="title_home">Home</string>
    <string name="title_analysis">Analysis</string>
    <string name="title_profile">Profile</string>
    <string name="rv_lunch">Makan Siang</string>
    <string name="rv_date">20/04/24</string>
    <string name="rv_money">Rp. 30.000</string>
    <string name="name_account">Hi,</string>
    <string name="greetings">Welcome Back</string>
    <string name="spending_limit">Spending Limit</string>
    <string name="main_money">Rp.1.000.000</string>
    <string name="income">Income</string>
    <string name="income_money">+ Rp 500.000</string>
    <string name="spendings">Spendings</string>
    <string name="spending_money">- Rp 300.000</string>
    <string name="category">Category</string>
    <string name="transaction">Transaction</string>
    <string name="plugin_desc">gambar orang menabung</string>
    <string name="history"><u>View all</u></string>

    <!--  OnBoarding  -->
    <string name="tour1_title">Welcome To Gebung!</string>
    <string name="tour1_description">Gebung is a personal finance\n management application crafted\n to empower users in efficiently\n managing their financial\n resources.</string>
    <string name="tour2_title">Want To Manage Finances\n Easily?</string>
    <string name="tour2_description">Try all the features available on\n Gebung and enjoy various\n conveniences in managing your\n finances</string>
    <string name="welcome_title">Welcome To \nGebung</string>
    <string name="welcome_description">let\'s organize your finances</string>
    <string name="welcome_button">Start</string>

    <!--  Sign In  -->
    <string name="signin_underline"><u>Sign In</u></string>
    <string name="signin_title">Sign In</string>
    <string name="signin_email">Email</string>
    <string name="signin_email_hint">Enter your email address</string>
    <string name="signin_password">Password</string>
    <string name="signin_password_hint">Enter your password</string>
    <string name="signin_forgot">Forgot your password?</string>
    <string name="signin_continue">Or continue with</string>
    <string name="sign_donthaveacc">Don\'t have an account?</string>

    <!--  Sign Up  -->
    <string name="signup_underline"><u>Sign Up</u></string>
    <string name="signup">Sign Up</string>
    <string name="signup_name">Full Name</string>
    <string name="signup_name_hint">Enter yout full name</string>
    <string name="signup_email">Email</string>
    <string name="signup_email_hint">Enter your email address</string>
    <string name="signup_password">Password</string>
    <string name="signup_password_hint">Enter your password</string>
    <string name="signup_continuewith">Or continue with</string>
    <string name="signup_haveaccount">have an account?</string>

    <!--  Profile  -->
    <string name="profile_title">Profile</string>
    <string name="profile_name">Alexa Howard</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="contact_us">Contact Us</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>

    <!---  Edit Profile  -->
    <string name="save">Save</string>
    <string name="price">Price</string>
    <string name="date">Date</string>
    <string name="title">Title</string>
    <string name="dialog_title">+ Add New</string>

    <!--  Edit Profile  -->
    <string name="fullname">Fullname</string>
    <string name="input_name">Input Your Name</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="province">Province</string>
    <string name="input_province">Input Your Province</string>
    <string name="upload_pict">Unggah Foto Anda</string>

    <!--  About  -->
    <string name="desc1">Gebung is a personal finance\nmanagement application crafted\nto empower users in efficiently\nmanaging their financial\nresources.</string>
    <string name="desc2">Equipped with a suite of features,\nthe app allows users to easily record\nexpenses, keep transaction logs, receive\ntimely notifications when they approach\npredetermined spending limits, and\nbenefit from accurate spending\npredictions based on their past\nspending patterns.</string>
    <string name="cancel">Cancel</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--  History   -->
    <string name="history_title">History</string>
    <string name="added_successfully">Added\nSuccessfully</string>
    <string name="close">Close</string>
    <string name="expense">Expense</string>
    <string name="enter_your_price">Enter Your Price</string>
    <string name="enter_your_category">Enter Your Category</string>
    <string name="type">Type</string>
    <string name="enter_your_title">Enter Your Title</string>

    <!--  Analysis  -->
    <string name="analysis_title">Analysis</string>
    <string name="about_gebung">About Gebung</string>
    <string name="total_limit">Total Limit</string>
    <string name="reminder">Don\'t forget to record your\n expences!</string>
    <string name="set_limit">Set Limit</string>
    <string name="foto_profile">Foto Profile</string>
    <string name="daily_input">Daily Input</string>
    <string name="inside_circle">3 of 7</string>
    <string name="other">Other</string>
    <string name="health">Health</string>
    <string name="transport">Transportation</string>
    <string name="food">Food</string>
    <string name="shop">Shopping</string>
    <string name="predicted_expenses_for_n_next_month">Predicted Expenses For\n Next Month</string>
    <string name="set_date">Atur Tanggal</string>

    <string name="your_web_client_id">228244129517-k4m4i252lklddnbgksrldj3kcg3qnsgt.apps.googleusercontent.com</string>

    <!--  Notification  -->
    <string name="notification_title">Set Your Daily Notification</string>
    <string name="set_notification">Set Notification</string>
    <string name="close_notification">Close</string>
    <string name="money">0</string>
    <string name="analysis_date">December 2024</string>
    <string name="percent">0%</string>
    <string name="hint_limit">Enter Your Limit</string>
    <string name="logout_info">Are you sure to logout\n your accout?</string>
</resources>