<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/transparent_background"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_title"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:fontFamily="@font/robotoregular"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="16sp"
            android:textColor="@color/gray"
            android:fontFamily="@font/poppinsregular"
            android:layout_marginStart="28dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_info"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:inputType="text"
            android:ems="10"
            android:hint="@string/enter_your_title"
            android:fontFamily="@font/latoregular"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title"/>

        <TextView
            android:id="@+id/tv_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:textSize="16sp"
            android:textColor="@color/gray"
            android:fontFamily="@font/poppinsregular"
            android:layout_marginStart="28dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ed_title"/>

        <Spinner
            android:id="@+id/sp_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:inputType="text"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_category"/>

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textSize="16sp"
            android:textColor="@color/gray"
            android:fontFamily="@font/poppinsregular"
            android:layout_marginStart="28dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sp_category"/>

        <TextView
            android:id="@+id/label_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/set_date"
            android:textColor="@color/main_background"
            android:textStyle="bold"
            android:textSize="18sp"
            android:fontFamily="@font/latoregular"
            android:gravity="start|center"
            android:layout_marginStart="28dp"
            app:drawableStartCompat="@drawable/ic_date"
            app:drawableTint="@color/main_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_date"/>
        
        <TextView
            android:id="@+id/text_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="22dp"
            app:layout_constraintTop_toBottomOf="@id/tv_date" />

        <TextView
            android:id="@+id/tv_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textSize="16sp"
            android:textColor="@color/gray"
            android:fontFamily="@font/poppinsregular"
            android:layout_marginStart="28dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/label_date"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:inputType="number"
            android:ems="10"
            android:hint="@string/enter_your_price"
            android:fontFamily="@font/latoregular"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_price"/>


        <TextView
            android:id="@+id/tv_options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type"
            android:textSize="16sp"
            android:textColor="@color/gray"
            android:fontFamily="@font/poppinsregular"
            android:layout_marginStart="28dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ed_price"/>

        <RadioGroup
            android:id="@+id/rg_options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_options">

            <RadioButton
                android:id="@+id/radio_income"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/income"
                android:fontFamily="@font/robotoregular"/>

            <RadioButton
                android:id="@+id/radio_expense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="55dp"
                android:text="@string/expense"
                android:fontFamily="@font/robotoregular"/>

        </RadioGroup>

        <Button
            android:id="@+id/btn_save"
            android:layout_width="245dp"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:fontFamily="@font/opensansregular"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:backgroundTint="@color/button_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rg_options" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="245dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:fontFamily="@font/opensansregular"
            android:backgroundTint="@color/button_color"
            android:layout_marginBottom="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_save"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>