<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/main_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.editprofile.EditProfileActivity">
    
    <ImageView
        android:id="@+id/img_profile"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars"/>

    <Button
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload_pict"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@color/button_text_color"
        android:backgroundTint="@color/button_color"
        android:layout_marginTop="28dp"
        app:layout_constraintStart_toEndOf="@id/img_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/img_profile"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_edit_profile"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:layout_marginTop="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/transparent_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_profile"
        app:cardCornerRadius="50dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_fullname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fullname"
                android:textSize="16sp"
                android:textColor="@color/profile_textcolor"
                android:layout_marginStart="21dp"
                android:layout_marginTop="28dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_fullname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/input_name"
                android:layout_marginStart="21dp"
                android:layout_marginEnd="21dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_fullname"/>

            <TextView
                android:id="@+id/tv_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:textSize="16sp"
                android:textColor="@color/profile_textcolor"
                android:layout_marginStart="21dp"
                android:layout_marginTop="28dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ed_fullname"/>

            <RadioGroup
                android:id="@+id/rg_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_gender">
                
                <RadioButton
                    android:id="@+id/radio_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male"/>
                
                <RadioButton
                    android:id="@+id/radio_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="55dp"
                    android:text="@string/female"/>
                
            </RadioGroup>

            <TextView
                android:id="@+id/tv_province"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/province"
                android:textSize="16sp"
                android:textColor="@color/profile_textcolor"
                android:layout_marginStart="21dp"
                android:layout_marginTop="28dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rg_gender"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_province"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="21dp"
                android:layout_marginEnd="21dp"
                android:hint="@string/input_province"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_province"/>

            <Button
                android:id="@+id/btn_save"
                android:layout_width="245dp"
                android:layout_height="55dp"
                android:layout_marginTop="42dp"
                android:text="@string/save"
                android:backgroundTint="@color/button_color"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ed_province"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>